sol.h

#define sol sol_inline
  typedef long double Float;
  typedef double Float;
  typedef float Float;
  //////////////////////////////////////////////////////////////////////////////
 // Math Constants ////////////////////////////////////////////////////////////
//////////////////////////////////////////////////////////////////////////////

/// sol_pi ///
// Description
//   The constant used to equal the value of Pi for Sol's internal calculations.

static const Float sol_pi = ((Float)(3.14159265358979323846));
/// sol_tau ///
// Description
//   A constant which is equal to two times the value of Pi for Sol's internal
//   calculations.

static const Float sol_tau = ((Float)(6.28318530717958647692));
/// sol_g ///
// Description
//   A constant which is equal to the acceleration of gravity in m/s/s.

static const Float sol_g = ((Float)(9.80665));
/// sol_c ///
// Description
//   A constant which is equal to the speed of light in m/s.

static const Float sol_c = ((Float)(299792000));
  //////////////////////////////////////////////////////////////////////////////
 // Struct Type Definitions ///////////////////////////////////////////////////
//////////////////////////////////////////////////////////////////////////////

/// Vec2 ///
// Description
//   A type comprised of two floats to represent a 2D vector or position.
// Fields
//   x: Dimension (Float)
//   y: Dimension (Float)
//   f: Dimensions (Float[2])

typedef struct {
  union {
    struct {
      Float x, y;
    };
    Float f[2];
    #if defined(SOL_AVX_64)
      __m128d avx64;
    #elif defined(SOL_AVX_32)
      __m128 avx32;
    #elif defined(SOL_NEON_64)
      f64x2_t neon64;
    #elif defined(SOL_NEON_32)
      f32x2_t neon32;
    #endif
  };
} Vec2;
/// Vec3 ///
// Description
//   A type comprised of three floats to represent a 3D vector or position.
// Fields
//   x: Dimension (sol_f)
//   y: Dimension (sol_f)
//   z: Dimension (sol_F)
//   f: Dimensions (Float[3])

typedef struct {
  union {
    struct {
      Float x, y, z;
    };
    Float f[3];
    #if defined(SOL_AVX_64)
      __m256d avx64;
    #elif defined(SOL_AVX_32)
      __m128 avx32;
    #elif defined(SOL_NEON_64)
      f64x4_t neon64;
    #elif defined(SOL_NEON_32)
      f32x4_t neon32;
    #endif
  };
} Vec3;
/// Vec4 ///
// Description
//   A type comprised of four floats to represent a quaternion or axis/angle
//   rotation.
// Fields
//   x: Dimension (Float)
//   y: Dimension (Float)
//   z: Dimension (Float)
//   w: Dimension (Float)
//   f: Dimensions (Float[4])

typedef struct {
  union {
    struct {
      Float x, y, z, w;
    };
    Float f[4];
    #if defined(SOL_AVX_64)
      __m256d avx64;
    #elif defined(SOL_AVX)
      __m128 avx32;
    #elif defined(SOL_NEON_64)
      f64x4_t neon64;
    #elif defined(SOL_NEON)
      f32x4_t neon32;
    #endif
  };
} Vec4;
/// Mat2 ///
// Description
//   A type comprised of a 2x2 matrix of Float types, or two 2D
//   vectors.
// Fields
//   v: Vector Matrix (Vec2[2])
//   f: Float Matrix (Float[2][2])

typedef union {
  Vec2 v[2];
  Float f[2][2];
} Mat2;
/// Mat3 ///
// Description
//   A type comprised of a 3x3 matrix of Float types, or three
//   3D vectors.
// Fields
//   v: Vector Matrix (Vec3[3])
//   f: Float Matrix (Float[3][3])

typedef union {
  Vec3 v[3];
  Float f[3][3];
} Mat3;
/// Mat4 ///
// Description
//   A type comprised of a 4x4 matrix of Float types, or four
//   4D vectors.
// Fields
//   v: Vector Matrix (Vec4[4])
//   f: Float Matrix (Float[4][4])

typedef union {
  Vec4 v[4];
  Float f[4][4];
} Mat4;
/// Box2 ///
// Description
//   A type comprised of two 2D positions that represent a bounding box.
// Fields
//   lower: Position (Vec2)
//   upper: Position (Vec2)

typedef struct {
  Vec2 lower, upper;
} Box2;
Mat2 mat2_add(Mat2 a, Mat2 b);
Mat2 mat2_addf(Mat2 m, Float f);
Mat2 mat2_sub(Mat2 a, Mat2 b);
Mat2 mat2_subf(Mat2 m, Float f);
Mat2 mat2_fsub(Float f, Mat2 m);
Mat2 mat2_mul(Mat2 a, Mat2 b);
Mat2 mat2_mulf(Mat2 m, Float f);
Mat2 mat2_div(Mat2 a, Mat2 b);
Mat2 mat2_divf(Mat2 m, Float f);
Mat2 mat2_fdiv(Float f, Mat2 m);
Mat2 mat2_avg(Mat2 a, Mat2 b);
Mat2 mat2_avgf(Mat2 m, Float f);
void mat2_print(Mat2 m);
  //////////////////////////////////////////////////////////////////////////////
 // Mat3 Function Declarations ////////////////////////////////////////////////
//////////////////////////////////////////////////////////////////////////////

Mat3 mat3_init(Float f11, Float f12, Float f13,
                          Float f21, Float f22, Float f23,
                          Float f31, Float f32, Float f33);
Mat3 mat3_initv(Vec3 v1,
                           Vec3 v2,
                           Vec3 v3);
Mat3 mat3_initf(Float f);
Mat3 mat3_zero(void);
Mat3 mat3_add(Mat3 a, Mat3 b);
Mat3 mat3_addf(Mat3 m, Float f);
Mat3 mat3_sub(Mat3 a, Mat3 b);
Mat3 mat3_subf(Mat3 m, Float f);
Mat3 mat3_fsub(Float f, Mat3 m);
Mat3 mat3_mul(Mat3 a, Mat3 b);
Mat3 mat3_mulf(Mat3 m, Float f);
Mat3 mat3_div(Mat3 a, Mat3 b);
Mat3 mat3_divf(Mat3 m, Float f);
Mat3 mat3_fdiv(Float f, Mat3 m);
Mat3 mat3_avg(Mat3 a, Mat3 b);
Mat3 mat3_avgf(Mat3 m, Float f);
void mat3_print(Mat3 m);
  //////////////////////////////////////////////////////////////////////////////
 // Mat4 Function Declarations ////////////////////////////////////////////////
//////////////////////////////////////////////////////////////////////////////

Mat4 mat4_init(Float f11, Float f12, Float f13, Float f14,
                          Float f21, Float f22, Float f23, Float f24,
                          Float f31, Float f32, Float f33, Float f34,
                          Float f41, Float f42, Float f43, Float f44);
Mat4 mat4_initv(Vec4 v1,
                           Vec4 v2,
                           Vec4 v3,
                           Vec4 v4);
Mat4 mat4_initf(Float f);
Mat4 mat4_zero(void);
Mat4 mat4_add(Mat4 a, Mat4 b);
Mat4 mat4_addf(Mat4 m, Float f);
Mat4 mat4_sub(Mat4 a, Mat4 b);
Mat4 mat4_subf(Mat4 m, Float f);
Mat4 mat4_fsub(Float f, Mat4 m);
Mat4 mat4_mul(Mat4 a, Mat4 b);
Mat4 mat4_mulf(Mat4 m, Float f);
Mat4 mat4_div(Mat4 a, Mat4 b);
Mat4 mat4_divf(Mat4 m, Float f);
Mat4 mat4_fdiv(Float f, Mat4 m);
Mat4 mat4_avg(Mat4 a, Mat4 b);
Mat4 mat4_avgf(Mat4 m, Float f);
void mat4_print(Mat4 m);
  //////////////////////////////////////////////////////////////////////////////
 // Box2 Function Declarations ////////////////////////////////////////////////
//////////////////////////////////////////////////////////////////////////////

Box2 box2_init(Vec2 lower, Vec2 upper);
Box2 box2_initv(Vec2 v);
Box2 box2_initf(Float f);
Box2 box2_zero(void);
Vec2 box2_pos(Box2 b);
Float box2_x(Box2 b);
Float box2_y(Box2 b);
bool box2_aabb(Box2 a, Box2 b);
bool box2_pip(Box2 b, Vec2 v);
Box2 box2_add(Box2 a, Box2 b);
Box2 box2_addv(Box2 b, Vec2 v);
Box2 box2_addf(Box2 b, Float f);
Box2 box2_sub(Box2 a, Box2 b);
Box2 box2_subv(Box2 b, Vec2 v);
Box2 box2_vsub(Vec2 v, Box2 b);
Box2 box2_subf(Box2 b, Float f);
Box2 box2_fsub(Float f, Box2 b);
Box2 box2_mul(Box2 a, Box2 b);
Box2 box2_mulv(Box2 b, Vec2 v);
Box2 box2_mulf(Box2 b, Float f);
Box2 box2_div(Box2 a, Box2 b);
Box2 box2_divv(Box2 b, Vec2 v);
Box2 box2_vdiv(Vec2 v, Box2 b);
Box2 box2_divf(Box2 b, Float f);
Box2 box2_fdiv(Float f, Box2 b);