sol.nim


proc mat2_add*(a, b: Mat2): Mat2         {.importc: "mat2_add",  header: "sol.h".}
proc mat2_addf*(m: Mat2; f: Float): Mat2 {.importc: "mat2_addf", header: "sol.h".}
proc mat2_sub*(a, b: Mat2): Mat2         {.importc: "mat2_sub",  header: "sol.h".}
proc mat2_subf*(m: Mat2; f: Float): Mat2 {.importc: "mat2_subf", header: "sol.h".}
proc mat2_fsub*(f: Float; m: Mat2): Mat2 {.importc: "mat2_fsub", header: "sol.h".}
proc mat2_mul*(a, b: Mat2): Mat2         {.importc: "mat2_mul",  header: "sol.h".}
proc mat2_mulf*(m: Mat2; f: Float): Mat2 {.importc: "mat2_mulf", header: "sol.h".}
proc mat2_div*(a, b: Mat2): Mat2         {.importc: "mat2_div",  header: "sol.h".}
proc mat2_divf*(m: Mat2; f: Float): Mat2 {.importc: "mat2_divf", header: "sol.h".}
proc mat2_fdiv*(f: Float; m: Mat2): Mat2 {.importc: "mat2_fdiv", header: "sol.h".}
proc mat2_avg*(a, b: Mat2): Mat2         {.importc: "mat2_avg",  header: "sol.h".}
proc mat2_avgf*(m: Mat2; f: Float): Mat2 {.importc: "mat2_avgf", header: "sol.h".}

proc mat2_print*(m: Mat2): void {.importc: "mat2_print", header: "sol.h".}

################################################################################
# Mat2 Operators ###############################################################
################################################################################

template `+`*(a, b: Mat2): Mat2        = mat2_add(a, b)
template `+`*(m: Mat2; f: Float): Mat2 = mat2_addf(m, f)
template `+`*(f: Float; m: Mat2): Mat2 = mat2_addf(m, f)
template `-`*(a, b: Mat2): Mat2        = mat2_sub(a, b)
template `-`*(m: Mat2; f: Float): Mat2 = mat2_subf(m, f)
template `-`*(f: Float; m: Mat2): Mat2 = mat2_fsub(f, m)
template `*`*(a, b: Mat2): Mat2        = mat2_mul(a, b)
template `*`*(m: Mat2; f: Float): Mat2 = mat2_mulf(m, f)
template `*`*(f: Float; m: Mat2): Mat2 = mat2_mulf(m, f)
template `/`*(a, b: Mat2): Mat2        = mat2_div(a, b)
template `/`*(m: Mat2; f: Float): Mat2 = mat2_divf(m, f)
template `/`*(f: Float; m: Mat2): Mat2 = mat2_fdiv(f, m)

template `+=`*(a: var Mat2; b: Mat2) =  a = mat2_add(a, b)
template `+=`*(v: var Mat2; f: Float) = v = mat2_addf(v, f)
template `-=`*(a: var Mat2; b: Mat2) =  a = mat2_sub(a, b)
template `-=`*(v: var Mat2; f: Float) = v = mat2_subf(v, f)
template `*=`*(a: var Mat2; b: Mat2) =  a = mat2_mul(a, b)
template `*=`*(v: var Mat2; f: Float) = v = mat2_mulf(v, f)
template `/=`*(a: var Mat2; b: Mat2) =  a = mat2_div(a, b)
template `/=`*(v: var Mat2; f: Float) = v = mat2_divf(v, f)

################################################################################
# Mat3 Functions ###############################################################
################################################################################

proc mat3_init*(f11, f12, f13, f21, f22, f23, f31, f32, f33: Float): Mat3 {.importc: "mat3_init", header: "sol.h".}
proc mat3_initv*(v1, v2, v3: Vec3): Mat3                                  {.importc: "mat3_initv", header: "sol.h".}
proc mat3_initf*(f: Float): Mat3                                          {.importc: "mat3_initf", header: "sol.h".}
proc mat3_zero*(): Mat3                                                   {.importc: "mat3_zero", header: "sol.h".}

proc mat3_add*(a, b: Mat3): Mat3         {.importc: "mat3_add",  header: "sol.h".}
proc mat3_addf*(m: Mat3; f: Float): Mat3 {.importc: "mat3_addf", header: "sol.h".}
proc mat3_sub*(a, b: Mat3): Mat3         {.importc: "mat3_sub",  header: "sol.h".}
proc mat3_subf*(m: Mat3; f: Float): Mat3 {.importc: "mat3_subf", header: "sol.h".}
proc mat3_fsub*(f: Float; m: Mat3): Mat3 {.importc: "mat3_fsub", header: "sol.h".}
proc mat3_mul*(a, b: Mat3): Mat3         {.importc: "mat3_mul",  header: "sol.h".}
proc mat3_mulf*(m: Mat3; f: Float): Mat3 {.importc: "mat3_mulf", header: "sol.h".}
proc mat3_div*(a, b: Mat3): Mat3         {.importc: "mat3_div",  header: "sol.h".}
proc mat3_divf*(m: Mat3; f: Float): Mat3 {.importc: "mat3_divf", header: "sol.h".}
proc mat3_fdiv*(f: Float; m: Mat3): Mat3 {.importc: "mat3_fdiv", header: "sol.h".}
proc mat3_avg*(a, b: Mat3): Mat3         {.importc: "mat3_avg",  header: "sol.h".}
proc mat3_avgf*(m: Mat3; f: Float): Mat3 {.importc: "mat3_avgf", header: "sol.h".}

proc mat3_print*(m: Mat3): void {.importc: "mat3_print", header: "sol.h".}

################################################################################
# Mat3 Operators ###############################################################
################################################################################

template `+`*(a, b: Mat3): Mat3        = mat3_add(a, b)
template `+`*(m: Mat3; f: Float): Mat3 = mat3_addf(m, f)
template `+`*(f: Float; m: Mat3): Mat3 = mat3_addf(m, f)
template `-`*(a, b: Mat3): Mat3        = mat3_sub(a, b)
template `-`*(m: Mat3; f: Float): Mat3 = mat3_subf(m, f)
template `-`*(f: Float; m: Mat3): Mat3 = mat3_fsub(f, m)
template `*`*(a, b: Mat3): Mat3        = mat3_mul(a, b)
template `*`*(m: Mat3; f: Float): Mat3 = mat3_mulf(m, f)
template `*`*(f: Float; m: Mat3): Mat3 = mat3_mulf(m, f)
template `/`*(a, b: Mat3): Mat3        = mat3_div(a, b)
template `/`*(m: Mat3; f: Float): Mat3 = mat3_divf(m, f)
template `/`*(f: Float; m: Mat3): Mat3 = mat3_fdiv(f, m)

template `+=`*(a: var Mat3; b: Mat3)  = a = mat3_add(a, b)
template `+=`*(m: var Mat3; f: Float) = m = mat3_addf(m, f)
template `-=`*(a: var Mat3; b: Mat3)  = a = mat3_sub(a, b)
template `-=`*(m: var Mat3; f: Float) = m = mat3_subf(m, f)
template `*=`*(a: var Mat3; b: Mat3)  = a = mat3_mul(a, b)
template `*=`*(m: var Mat3; f: Float) = m = mat3_mulf(m, f)
template `/=`*(a: var Mat3; b: Mat3)  = a = mat3_div(a, b)
template `/=`*(m: var Mat3; f: Float) = m = mat3_divf(m, f)

################################################################################
# Mat4 Functions ###############################################################
################################################################################

proc mat4_init*(f11, f12, f13, f14, f21, f22, f23, f24, f31, f32, f33, f34, f41, f42, f43, f44: Float): Mat4 {.importc: "mat4_init",  header: "sol.h".}
proc mat4_initv*(v1, v2, v3, v4: Vec4): Mat4                                                                 {.importc: "mat4_initv", header: "sol.h".}
proc mat4_initf*(f: Float): Mat4                                                                             {.importc: "mat4_initf", header: "sol.h".}
proc mat4_zero*(): Mat4                                                                                      {.importc: "mat4_zero",  header: "sol.h".}

proc mat4_add*(a, b: Mat4): Mat4         {.importc: "mat4_add",  header: "sol.h".}
proc mat4_addf*(m: Mat4; f: Float): Mat4 {.importc: "mat4_addf", header: "sol.h".}
proc mat4_sub*(a, b: Mat4): Mat4         {.importc: "mat4_sub",  header: "sol.h".}
proc mat4_subf*(m: Mat4; f: Float): Mat4 {.importc: "mat4_subf", header: "sol.h".}
proc mat4_fsub*(f: Float; m: Mat4): Mat4 {.importc: "mat4_fsub", header: "sol.h".}
proc mat4_mul*(a, b: Mat4): Mat4         {.importc: "mat4_mul",  header: "sol.h".}
proc mat4_mulf*(m: Mat4; f: Float): Mat4 {.importc: "mat4_mulf", header: "sol.h".}
proc mat4_div*(a, b: Mat4): Mat4         {.importc: "mat4_div",  header: "sol.h".}
proc mat4_divf*(m: Mat4; f: Float): Mat4 {.importc: "mat4_divf", header: "sol.h".}
proc mat4_fdiv*(f: Float; m: Mat4): Mat4 {.importc: "mat4_fdiv", header: "sol.h".}
proc mat4_avg*(a, b: Mat4): Mat4         {.importc: "mat4_avg",  header: "sol.h".}
proc mat4_avgf*(m: Mat4; f: Float): Mat4 {.importc: "mat4_avgf", header: "sol.h".}

proc mat4_print*(m: Mat4): Mat4 {.importc: "mat4_print", header: "sol.h".}

################################################################################
# Mat4 Operators ###############################################################
################################################################################

template `+`*(a, b: Mat4): Mat4        = mat4_add(a, b)
template `+`*(m: Mat4; f: Float): Mat4 = mat4_addf(m, f)
template `+`*(f: Float; m: Mat4): Mat4 = mat4_addf(m, f)
template `-`*(a, b: Mat4): Mat4        = mat4_sub(a, b)
template `-`*(m: Mat4; f: Float): Mat4 = mat4_subf(m, f)
template `-`*(f: Float; m: Mat4): Mat4 = mat4_fsub(f, m)
template `*`*(a, b: Mat4): Mat4        = mat4_mul(a, b)
template `*`*(m: Mat4; f: Float): Mat4 = mat4_mulf(m, f)
template `*`*(f: Float; m: Mat4): Mat4 = mat4_mulf(m, f)
template `/`*(a, b: Mat4): Mat4        = mat4_div(a, b)
template `/`*(m: Mat4; f: Float): Mat4 = mat4_divf(m, f)
template `/`*(f: Float; m: Mat4): Mat4 = mat4_fdiv(f, m)

template `+=`*(a: var Mat4; b: Mat4)  = a = mat4_add(a, b)
template `+=`*(m: var Mat4; f: Float) = m = mat4_addf(m, f)
template `-=`*(a: var Mat4; b: Mat4)  = a = mat4_sub(a, b)
template `-=`*(m: var Mat4; f: Float) = m = mat4_subf(m, f)
template `*=`*(a: var Mat4; b: Mat4)  = a = mat4_mul(a, b)
template `*=`*(m: var Mat4; f: Float) = m = mat4_mulf(m, f)
template `/=`*(a: var Mat4; b: Mat4)  = a = mat4_div(a, b)
template `/=`*(m: var Mat4; f: Float) = m = mat4_divf(m, f)

################################################################################
# Box2 Functions ###############################################################
################################################################################

proc box2_init*(lower, upper: Vec2): Box2 {.importc: "box2_init",  header: "sol.h".}
proc box2_initv*(v: Vec2): Box2           {.importc: "box2_initv", header: "sol.h".}
proc box2_initf*(f: Float): Box2          {.importc: "box2_initf", header: "sol.h".}
proc box2_zero*(): Box2                   {.importc: "box2_zero",  header: "sol.h".}

proc box2_pos*(b: Box2): Vec2 {.importc: "box2_pos", header: "sol.h".}
proc box2_x*(b: Box2): Float  {.importc: "box2_x",   header: "sol.h".}
proc box2_y*(b: Box2): Float  {.importc: "box2_y",   header: "sol.h".}

proc box2_aabb*(a, b: Box2): bool      {.importc: "box2_aabb", header: "sol.h".}
proc box2_pip*(b: Box2; v: Vec2): bool {.importc: "box2_pip",  header: "sol.h".}

proc box2_add*(a, b: Box2): Box2         {.importc: "box2_add",  header: "sol.h".}
proc box2_addv*(b: Box2; v: Vec2): Box2  {.importc: "box2_addv", header: "sol.h".}
proc box2_addf*(b: Box2; f: Float): Box2 {.importc: "box2_addf", header: "sol.h".}
proc box2_sub*(a, b: Box2): Box2         {.importc: "box2_sub",  header: "sol.h".}
proc box2_subv*(b: Box2; v: Vec2): Box2  {.importc: "box2_subv", header: "sol.h".}
proc box2_vsub*(v: Vec2; b: Box2): Box2  {.importc: "box2_vsub", header: "sol.h".}
proc box2_subf*(b: Box2; f: Float): Box2 {.importc: "box2_subf", header: "sol.h".}
proc box2_fsub*(f: Float; b: Box2): Box2 {.importc: "box2_fsub", header: "sol.h".}
proc box2_mul*(a, b: Box2): Box2         {.importc: "box2_mul",  header: "sol.h".}
proc box2_mulv*(b: Box2; v: Vec2): Box2  {.importc: "box2_mulv", header: "sol.h".}
proc box2_mulf*(b: Box2; f: Float): Box2 {.importc: "box2_mulf", header: "sol.h".}
proc box2_div*(a, b: Box2): Box2         {.importc: "box2_div",  header: "sol.h".}
proc box2_divv*(b: Box2; v: Vec2): Box2  {.importc: "box2_divv", header: "sol.h".}
proc box2_vdiv*(v: Vec2; b: Box2): Box2  {.importc: "box2_vdiv", header: "sol.h".}
proc box2_divf*(b: Box2; f: Float): Box2 {.importc: "box2_divf", header: "sol.h".}
proc box2_fdiv*(f: Float; b: Box2): Box2 {.importc: "box2_fdiv", header: "sol.h".}

################################################################################
# Box2 Operators ###############################################################
################################################################################
